--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,30 @@
 Package: kwb.dygraph
-Maintainer: Hauke Sonnenberg <hauke.sonnenberg@kompetenz-wasser.de>
-Depends: dygraphs
-Imports: kwb.utils, kwb.event
-Author: Hauke Sonnenberg
-Version: 0.0.99
-License: GPL
-Title: additional functions to be used with dygraph-objects
-Description: additional functions to be used with dygraph-objects, 
-  e.g. shading of areas or drawing of lines representing time periods within
-  events (given by begin and end times).
-  
+Title: Additional Functions to be Usedwith Dygraph-Objects
+Version: 0.1.0
+Authors@R: 
+    c(person(given = "Hauke",
+             family = "Sonnenberg",
+             role = c("aut", "cre"),
+             email = "hauke.sonnenberg@kompetenz-wasser.de",
+             comment = c(ORCID = "0000-0001-9134-2871")),
+      person(given = "Michael",
+             family = "Rustler",
+             role = "ctb",
+             email = "michael.rustler@kompetenz-wasser.de",
+             comment = c(ORCID = "0000-0003-0647-7726")),
+      person(given = "Kompetenzzentrum Wasser Berlin gGmbH (KWB)",
+             role = "cph"))
+Description: Additional functions to be used with dygraph-objects e.g.
+    shading of areas or drawing of lines representing time periods within
+    events (given by begin and end times).
+License: MIT + file LICENSE
+URL: https://github.com/KWB-R/kwb.dygraph
+BugReports: https://github.com/KWB-R/kwb.dygraph/issues
+Imports: 
+    dygraphs
+Suggests: 
+    covr
+Encoding: UTF-8
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.1
